@@ -16,6 +16,7 @@
 	CHANGE - Group sorting is a bit more logical and the presentation nicer.
         CHANGE - cacti-integrate.php uses getopt to take more command-line params
 	CHANGE - Updated jQuery to latest version
+        CHANGE - Number formatting will pick 1G over 1000M (and similar) (thanks cerbum)
 	ADDED - LINK WIDTH accepts decimals
 	ADDED - cacti-integrate.php can generate DSStats TARGETs too
 	ADDED - Simple VIA editing in editor (thanks to Zdolny)
